# solana-program-template

./: .gitignore  Cargo.toml  Makefile
lib/: Cargo.toml
lib/src/: ix.rs  lib.rs
program/: Cargo.toml
program/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: common.rs  create_pool.rs
