[workspace]
resolver = "2"
members = [ 
    "sdk",
    "lib",
    "program",
]

[workspace.dependencies]
solana-sdk = "=1.18.17"
solana-client = "=1.18.17"
solana-program = "=1.18.17"
solana-transaction-status = "=1.18.17"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
lib = { path = "lib" }
